Added tests reachability